mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_binary_rhs.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Expected expression, found 'NewLine'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_binary_rhs.mux:2:13
   |
 2 | auto z = 1 +
   |             ^
